feat(server-config): Make sure all server configs have `GET`, `PUT` and `DELETE` routes
