# docs/openapi/openapi.yaml
@@ -34,44 +34,57 @@ paths:
     delete: { $ref: "features/server-config.yaml#/paths/reset_files_config" }
   "/v1/server/config/file-upload-allowed":
     put: { $ref: "features/server-config.yaml#/paths/set_file_upload_allowed" }
+    get: { $ref: "features/server-config.yaml#/paths/get_file_upload_allowed" }
+    delete: { $ref: "features/server-config.yaml#/paths/reset_file_upload_allowed" }
   # "/v1/server/config/file-storage-encryption-scheme":
   #   put: { $ref: "features/server-config.yaml#/paths/set_file_storage_encryption_scheme" }
   "/v1/server/config/file-storage-retention":
     put: { $ref: "features/server-config.yaml#/paths/set_file_storage_retention" }
+    get: { $ref: "features/server-config.yaml#/paths/get_file_storage_retention" }
+    delete: { $ref: "features/server-config.yaml#/paths/reset_file_storage_retention" }
   # === Message archive ===
   "/v1/server/config/messaging":
     delete: { $ref: "features/server-config.yaml#/paths/reset_messaging_config" }
   "/v1/server/config/message-archive-enabled":
     put: { $ref: "features/server-config.yaml#/paths/set_message_archive_enabled" }
+    get: { $ref: "features/server-config.yaml#/paths/get_message_archive_enabled" }
+    delete: { $ref: "features/server-config.yaml#/paths/reset_message_archive_enabled" }
   "/v1/server/config/message-archive-retention":
     put: { $ref: "features/server-config.yaml#/paths/set_message_archive_retention" }
+    get: { $ref: "features/server-config.yaml#/paths/get_message_archive_retention" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_message_archive_retention" }
   # === Push notifications ===
   "/v1/server/config/push-notifications":
     delete: { $ref: "features/server-config.yaml#/paths/reset_push_notifications_config" }
   "/v1/server/config/push-notification-with-body":
     put: { $ref: "features/server-config.yaml#/paths/set_push_notification_with_body" }
+    get: { $ref: "features/server-config.yaml#/paths/get_push_notification_with_body" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_push_notification_with_body" }
   "/v1/server/config/push-notification-with-sender":
     put: { $ref: "features/server-config.yaml#/paths/set_push_notification_with_sender" }
+    get: { $ref: "features/server-config.yaml#/paths/get_push_notification_with_sender" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_push_notification_with_sender" }
   # === Network encryption ===
   "/v1/server/config/network-encryption":
     delete: { $ref: "features/server-config.yaml#/paths/reset_network_encryption_config" }
   "/v1/server/config/tls-profile":
     put: { $ref: "features/server-config.yaml#/paths/set_tls_profile" }
+    get: { $ref: "features/server-config.yaml#/paths/get_tls_profile" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_tls_profile" }
   # === Server federation ===
   "/v1/server/config/server-federation":
     delete: { $ref: "features/server-config.yaml#/paths/reset_server_federation_config" }
   "/v1/server/config/federation-enabled":
     put: { $ref: "features/server-config.yaml#/paths/set_federation_enabled" }
+    get: { $ref: "features/server-config.yaml#/paths/get_federation_enabled" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_federation_enabled" }
   "/v1/server/config/federation-whitelist-enabled":
     put: { $ref: "features/server-config.yaml#/paths/set_federation_whitelist_enabled" }
+    get: { $ref: "features/server-config.yaml#/paths/get_federation_whitelist_enabled" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_federation_whitelist_enabled" }
   "/v1/server/config/federation-friendly-servers":
     put: { $ref: "features/server-config.yaml#/paths/set_federation_friendly_servers" }
+    get: { $ref: "features/server-config.yaml#/paths/get_federation_friendly_servers" }
     delete: { $ref: "features/server-config.yaml#/paths/reset_federation_friendly_servers" }
 
   # ===== Pod config =====
