# src/rest-api/src/features/server_config/file_upload.rs
@@ -11,16 +11,16 @@ use service::{
 
 use crate::{
     error::{self, Error},
-    server_config_reset_route, server_config_set_route,
+    server_config_reset_route, server_config_routes,
 };
 
 server_config_reset_route!(reset_files_config, reset_files_config_route);
 
-server_config_set_route!(
-    bool,
-    file_upload_allowed,
-    set_file_upload_allowed,
-    set_file_upload_allowed_route
+server_config_routes!(
+            key: file_upload_allowed, type: bool,
+      set:   set_file_upload_allowed_route using   set_file_upload_allowed,
+      get:   get_file_upload_allowed_route,
+    reset: reset_file_upload_allowed_route using reset_file_upload_allowed,
 );
 
 pub async fn set_file_storage_encryption_scheme_route() -> Result<Json<ServerConfig>, Error> {
@@ -29,9 +29,9 @@ pub async fn set_file_storage_encryption_scheme_route() -> Result<Json<ServerCon
     )))
 }
 
-server_config_set_route!(
-    PossiblyInfinite<Duration<DateLike>>,
-    file_storage_retention,
-    set_file_storage_retention,
-    set_file_storage_retention_route
+server_config_routes!(
+            key: file_storage_retention, type: PossiblyInfinite<Duration<DateLike>>,
+      set:   set_file_storage_retention_route using   set_file_storage_retention,
+      get:   get_file_storage_retention_route,
+    reset: reset_file_storage_retention_route using reset_file_storage_retention,
 );
